# algorand

./: .gitignore  Cargo.toml  PERF.md  README.md  SPEC.md
.github/workflows/: check-and-lint.yml
src/: lib.rs
src/protocol/: constants.rs  handshake.rs  mod.rs  payload_factory.rs  reading.rs  writing.rs
src/protocol/codecs/: algomsg.rs  mod.rs  msgpack.rs  payload.rs  tagmsg.rs  topic.rs  websocketcodec.rs
src/setup/: config.rs  constants.rs  mod.rs  node.rs  node_meta_data.rs
src/setup/kmd/: config.rs  constants.rs  mod.rs
src/setup/kmd/rest_api/: client.rs  message.rs  mod.rs
src/setup/node/: config.rs  constants.rs  mod.rs
src/setup/node/rest_api/: client.rs  message.rs  mod.rs
src/tests/: mod.rs
src/tests/conformance/: handshake.rs  mod.rs
src/tests/conformance/post_handshake/: mod.rs  msg_of_interest.rs  net_prio_response.rs
src/tests/conformance/post_handshake/broadcast/: agreementvote.rs  mod.rs  proposalpayload.rs
src/tests/conformance/post_handshake/cmd/: mod.rs  msg_digest_skip.rs  transaction.rs
src/tests/conformance/post_handshake/query/: get_block.rs  mod.rs  ping.rs
src/tests/performance/: get_blocks.rs  mod.rs  prio_test.rs
src/tests/performance/results/: p001_GET_BLOCKS_latency.txt  p002_t1_TRAFFIC_HIGH_LOW_latency.txt  p002_t2_TRAFFIC_SAME_PRIO_latency.txt  p002_t3_COMB_MSG_DIGEST_latency.txt  p002_t4_NET_PRIO_latency.txt  p002_t5_PROP_PAYLOAD_latency.txt  p002_t6_AGREEMENT_latency.txt
src/tests/resistance/: handshake.rs  mod.rs  random_bytes.rs
src/tests/resistance/post_handshake/: enormous_message.rs  mod.rs  random_bytes.rs
src/tools/: constants.rs  inner_node.rs  ips.rs  mod.rs  rpc.rs  synthetic_node.rs  util.rs
src/tools/metrics/: recorder.rs  tables.rs
tools/: ips.py  logging.config  setup_env.sh  ziggurat_network_template.json
