[package]
name = "ziggurat-algorand"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
data-encoding = "2.3"
fs_extra = "1.2"
futures-util = { version = "0.3", features = ["sink"] }
home = "0.5.3"
httparse = "1.8"
pea2pea = "0.43"
radix_fmt = "1.0"
reqwest = { version = "0.11" }
rmp-serde = "1.0.0"
serde_bytes = "0.11"
sha2 = "0.10"
tempfile = "3.3"
tokio-tungstenite = "0.17"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.5.9"
tungstenite = "0.17"
websocket-codec = "0.5"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tracing]
version = "0.1"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "env-filter", "fmt", "parking_lot", "smallvec"]
