[package]
name = "ziggurat-algorand"
version = "0.1.0"
edition = "2021"

[features]
performance = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
data-encoding = "2.3"
fs_extra = "1.2"
futures-util = { version = "0.3", features = ["sink"] }
home = "0.5.3"
httparse = "1.8"
metrics = "0.20.0"
metrics-util = "0.14.0"
paste = "1.0"
pea2pea = "0.45"
radix_fmt = "1.0"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rmp-serde = "1.0.0"
serde_bytes = "0.11"
sha2 = "0.10"
tempfile = "3.3"
tokio-tungstenite = "0.17"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.5.9"
tungstenite = "0.17"
websocket-codec = "0.5"
ziggurat-core-metrics = { git = "https://github.com/runziggurat/ziggurat-core", tag = "v0.1.0" }
ziggurat-core-utils = { git = "https://github.com/runziggurat/ziggurat-core", tag = "v0.1.0" }

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tracing]
version = "0.1"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["ansi", "env-filter", "fmt", "parking_lot", "smallvec"]
